--- a/src/scenes/view/ShowAllPokemon.fxml
+++ b/src/scenes/view/ShowAllPokemon.fxml
@@ -8,89 +8,92 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="showAllPokemonAnc" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0"
-            stylesheets="@images/ShowAllPokemon.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.controller.ShowAllPokemonController">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="showAllPokemonAnc" maxHeight="-Infinity" maxWidth="-Infinity"
+            minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0"
+            stylesheets="@images/ShowAllPokemon.css" xmlns="http://javafx.com/javafx/10.0.1"
+            fx:controller="scenes.controller.ShowAllPokemonController">
     <children>
-        <Button fx:id="btnSelect" blendMode="MULTIPLY" layoutX="31.0" layoutY="61.0" mnemonicParsing="false" onAction="#showPokemon" prefHeight="60.0" prefWidth="120.0" text="Select" />
-        <Button fx:id="btnBack" blendMode="MULTIPLY" layoutY="724.0" mnemonicParsing="false" onAction="#backButton" prefHeight="60.0" prefWidth="120.0" text="Back" />
+        <Button fx:id="btnSelect" blendMode="MULTIPLY" layoutX="31.0" layoutY="54.0" mnemonicParsing="false"
+                onAction="#showPokemon" prefHeight="60.0" prefWidth="120.0" text="Select"/>
+        <Button fx:id="btnBack" blendMode="MULTIPLY" layoutX="31.0" layoutY="694.0" mnemonicParsing="false"
+                onAction="#backButton" prefHeight="60.0" prefWidth="120.0" text="Back"/>
         <Pane fx:id="pane1" layoutX="31.0" layoutY="133.0" prefHeight="541.0" prefWidth="410.0">
             <children>
-                <ListView fx:id="listView" layoutX="25.0" layoutY="18.0" onEditStart="#showPokemon" prefHeight="505.0" prefWidth="360.0" />
+                <ListView fx:id="listView" layoutX="25.0" layoutY="18.0" onEditStart="#showPokemon" prefHeight="505.0"
+                          prefWidth="360.0"/>
             </children>
         </Pane>
-        <Pane fx:id="pane2" layoutX="466.0" layoutY="46.0" prefHeight="708.0" prefWidth="485.0">
+        <Pane fx:id="pane2" layoutX="466.0" layoutY="46.0" prefHeight="708.0" prefWidth="456.0">
             <children>
                 <Label fx:id="labelName" layoutX="27.0" layoutY="330.0" text="Name:">
                     <font>
-                        <Font name="System Bold" size="25.0" />
+                        <Font name="System Bold" size="25.0"/>
                     </font>
                 </Label>
-                <Label fx:id="lblName" layoutX="123.0" layoutY="335.0" text="Label" />
+                <Label fx:id="lblName" layoutX="123.0" layoutY="335.0" text="0"/>
                 <Label fx:id="labelType" layoutX="222.0" layoutY="330.0" text="Type:">
                     <font>
-                        <Font name="System Bold" size="25.0" />
+                        <Font name="System Bold" size="25.0"/>
                     </font>
                 </Label>
-                <Label fx:id="lblType" layoutX="306.0" layoutY="335.0" text="Label" />
+                <Label fx:id="lblType" layoutX="306.0" layoutY="335.0" text="0"/>
                 <Label fx:id="labelID" layoutX="162.0" layoutY="387.0" text="ID:">
                     <font>
-                        <Font name="System Bold" size="25.0" />
+                        <Font name="System Bold" size="25.0"/>
                     </font>
                 </Label>
-                <Label fx:id="lblID" layoutX="214.0" layoutY="392.0" text="Label" />
+                <Label fx:id="lblID" layoutX="214.0" layoutY="392.0" text="0"/>
                 <Label fx:id="labelHealth" layoutX="27.0" layoutY="488.0" text="Health:">
                     <font>
-                        <Font name="System Bold" size="25.0" />
+                        <Font name="System Bold" size="25.0"/>
                     </font>
                 </Label>
-                <Label fx:id="lblHP" layoutX="130.0" layoutY="493.0" text="Label" />
+                <Label fx:id="lblHP" layoutX="130.0" layoutY="493.0" text="0"/>
                 <Label fx:id="labelSpeed" layoutX="253.0" layoutY="488.0" text="Speed:">
                     <font>
-                        <Font name="System Bold" size="25.0" />
+                        <Font name="System Bold" size="25.0"/>
                     </font>
                 </Label>
-                <Label fx:id="lblSpeed" layoutX="367.0" layoutY="493.0" text="Label" />
+                <Label fx:id="lblSpeed" layoutX="367.0" layoutY="493.0" text="0"/>
                 <Label fx:id="labelAttack" layoutX="25.0" layoutY="561.0" text="Attack:">
                     <font>
-                        <Font name="System Bold" size="25.0" />
+                        <Font name="System Bold" size="25.0"/>
                     </font>
                 </Label>
-                <Label fx:id="lblAtk" layoutX="130.0" layoutY="566.0" text="Label" />
+                <Label fx:id="lblAtk" layoutX="130.0" layoutY="566.0" text="0"/>
                 <Label fx:id="labelDefence" layoutX="246.0" layoutY="561.0" text="Defence: ">
                     <font>
-                        <Font name="System Bold" size="25.0" />
+                        <Font name="System Bold" size="25.0"/>
                     </font>
                 </Label>
-                <Label fx:id="lblDf" layoutX="367.0" layoutY="566.0" text="Label" />
-                <ImageView fx:id="imageView" fitHeight="200.0" fitWidth="200.0" layoutX="132.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
+                <Label fx:id="lblDf" layoutX="367.0" layoutY="566.0" text="0"/>
+                <ImageView fx:id="imageView" fitHeight="200.0" fitWidth="200.0" layoutX="132.0" layoutY="72.0"
+                           pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@images/pokeLogo.png" />
+                        <Image url="@images/pokeLogo.png"/>
                     </image>
                 </ImageView>
-            <Button fx:id="btnNickname" layoutX="75.0" layoutY="274.0" mnemonicParsing="false" onAction="#pokemonNickname" text="OK" />
-            <TextField fx:id="txtNickname" layoutX="152.0" layoutY="278.0" />
-            <Button fx:id="btnNoNickname" layoutX="357.0" layoutY="281.0" mnemonicParsing="false" onAction="#pokemonNoNickname" text="No" />
-            <Label fx:id="lblNickname" layoutX="145.0" layoutY="28.0" text="Give your new frind a  nickname!" />
-            <Circle fx:id="pokeBall" layoutX="232.0" layoutY="195.0" radius="135.0" stroke="BLACK" strokeType="INSIDE">
-               <fill>
-                  <LinearGradient endX="1.0" endY="1.0" proportional="false">
-                     <stops>
-                        <Stop color="WHITE" />
-                        <Stop color="WHITE" offset="0.04597701149425287" />
-                        <Stop color="WHITE" offset="0.5095785440613025" />
-                        <Stop color="#f80909" offset="0.9091914523837735" />
-                        <Stop color="#f80909" offset="1.0" />
-                     </stops>
-                  </LinearGradient>
-               </fill>
-            </Circle>
+                <ImageView fx:id="pokeBall" fitHeight="238.0" fitWidth="388.0" layoutX="98.0" layoutY="45.0"
+                           pickOnBounds="true" preserveRatio="true" visible="false">
+                    <image>
+                        <Image url="@images/pokeball.gif"/>
+                    </image>
+                </ImageView>
+                <Button fx:id="btnNickname" blendMode="MULTIPLY" layoutX="372.0" layoutY="269.0" mnemonicParsing="false"
+                        onAction="#pokemonNickname" text="Ok" visible="false"/>
+                <TextField fx:id="txtNickname" blendMode="MULTIPLY" layoutX="138.0" layoutY="274.0" prefHeight="25.0"
+                           prefWidth="218.0" text="Choose a name" visible="false"/>
+                <Button fx:id="btnNoNickname" blendMode="MULTIPLY" layoutX="15.0" layoutY="269.0"
+                        mnemonicParsing="false" onAction="#pokemonNoNickname" text="Keep its name" visible="false"/>
+                <Label fx:id="lblNickname" contentDisplay="CENTER" layoutX="35.0" layoutY="20.0"
+                       text="Give your new friend a nickname!" visible="false"/>
             </children>
         </Pane>
-      <Button fx:id="btnBuy" blendMode="MULTIPLY" layoutX="258.0" layoutY="61.0" mnemonicParsing="false" onAction="#reArrangeScene" prefHeight="60.0" prefWidth="183.0" text="Catch Pokemon!" />
+        <Button fx:id="btnBuy" blendMode="MULTIPLY" layoutX="258.0" layoutY="54.0" mnemonicParsing="false"
+                onAction="#reArrangeScene" prefHeight="60.0" prefWidth="183.0" text="Catch Pokémon!"/>
+        <Button fx:id="btnGetNewPokemon" blendMode="MULTIPLY" layoutX="217.0" layoutY="694.0" mnemonicParsing="false"
+                onAction="#getNewPokemon" prefHeight="60.0" text="Catch a new Pokémon!" visible="false"/>
     </children>
 </AnchorPane>
